# drake

./: .bazelrc  .clang-format  MODULE.bazel  README.md  just-right0.dot  run_all  run_dt  run_tau_slip  too-cold2.dot  too-cold3.dot  too-hot0.dot  too-hot1.dot  too-hot2.dot
attic/multibody/: kinematics_cache.h  rigid_body_tree.cc  rigid_body_tree.h  rigid_body_tree_alias_groups.cc  rigid_body_tree_alias_groups.h
bindings/generated_docstrings/: common.h  multibody_contact_solvers_icf.h
bindings/pydrake/: .clang-format  BUILD.bazel  __init__.py  autodiff_types_pybind.h  geometry_py.cc  lcm_py.cc  perception_py.cc  (+12 more)
common/: BUILD.bazel  autodiff2.h  autodiffxd.h  clang16_link_fail.h  default_scalars.h  drake_export.h  eigen_autodiff_types.h  eigen_stl_types.h  fmt_eigen.h  hash.h  identifier.h  is_dynamic_castable.h  never_destroyed.h  polynomial.cc  polynomial.h  random.cc  sha256.h  sorted_pair.h  symbolic_codegen.h  symbolic_environment.h  symbolic_expression.h  symbolic_formula.h  symbolic_monomial_util.h  symbolic_polynomial.cc  symbolic_polynomial.h
dot/: built_diagram.dot  epoch0.0.dot  epoch0.1.dot  epoch0.2.dot  epoch1.0.dot  epoch1.1.dot  epoch1.2.dot  epoch1.3.dot  epoch2.0.dot  epoch2.1-cpp.dot  epoch2.1-python.dot  epoch2.1.dot  epoch2.2-python.dot  just-right-0.dot  just-right0.dot  just-right1-cpp.dot  legend.dot  legend0.dot  too-cold0.dot  unbuilt_diagram.dot
examples/multibody/mp_convex_solver/: BUILD.bazel  clutter.cc  conveyor_belt.cc  conveyor_belt.sdf  push_box.cc  push_box.sdf  sliding_box.cc  sliding_box.sdf
examples/multibody/rimless_wheel/: BUILD.bazel  rimless_wheel_sim.cc
geometry/: BUILD.bazel  frame_kinematics_vector.cc  frame_kinematics_vector.h  geometry_properties.h  geometry_set.h  geometry_state.cc  geometry_state.h  internal_frame.h  internal_geometry.h  internal_hydroelasticate.cc  internal_hydroelasticate.h  meshcat.cc  meshcat.h  proximity_engine.cc  proximity_engine.h  proximity_properties.cc  proximity_properties.h  scene_graph.cc  scene_graph.h  scene_graph_config.h  scene_graph_inspector.h  shape_specification.h  utilities.h
gh13678/: BUILD.bazel  hopper_timestep0.py
math/: autodiff.h  linear_solve.h  partial_permutation.cc  partial_permutation.h  rigid_transform.h  roll_pitch_yaw.cc
multibody/contact_solvers/: BUILD.bazel  analytical_inverse_dynamics.h  block_sparse_linear_operator.cc  block_sparse_linear_operator.h  cone_ray_intersect.h  convex_solver_base.cc  convex_solver_base.h  friction_cone_constraint.cc  friction_cone_constraint.h  geodesic_interior_point_method.cc  geodesic_interior_point_method.h  linear_operator.cc  linear_operator.h  mp_convex_solver.cc  mp_convex_solver.h  mp_primal_solver.cc  mp_primal_solver.h  numerical_inverse_dynamics.cc  numerical_inverse_dynamics.h  point_contact_data.h  rtsafe.h  sparse_linear_operator.h  supernodal_solver.cc  supernodal_solver.h  system_dynamics_data.h  timer.h  unconstrained_primal_solver.cc  unconstrained_primal_solver.h
multibody/contact_solvers/icf/: BUILD.bazel  coupler_constraints_pool.cc  eigen_pool.h  gain_constraints_pool.cc  icf_builder.cc  icf_model.cc  icf_model.h  icf_solver.cc  joint_locking.txt  limit_constraints_pool.cc  patch_constraints_pool.cc  reduced_mapping.h  weld_constraints_pool.cc
multibody/contact_solvers/icf/test/: icf_builder_test.cc  icf_external_systems_linearizer_test.cc  icf_model_test.cc  two_spheres_test.cc
multibody/contact_solvers/test/: block_sparse_linear_operator_test.cc  cone_ray_intersect_test.cc  contact_solver_test.cc  eigen_matrix_free_test.cc  geodesic_solver_profile.cc  geodesic_solver_test.cc  inverse_dynamics_test.cc  multibody_sim_driver.h  pgs_solver.cc  pgs_solver.h  pgs_solver_test.cc  pizza_saver.sdf  pizza_saver_test.cc  rtsafe_test.cc  sparse_matrix_operations_test.cc  sparse_test_data.h  supernodal_solver_profile.cc  supernodal_solver_test.cc
solvers/: BUILD.bazel  bilinear_product_util.cc  branch_and_bound.cc  branch_and_bound.h  choose_best_solver.cc  conex_solver.cc  conex_solver.h  conex_solver_common.cc  constraint.cc  constraint.h  create_constraint.cc  create_constraint.h  create_cost.cc  csdp_solver.cc  csdp_solver_internal.h  dreal_solver.cc  dreal_solver.h  equality_constrained_qp_solver.cc  gurobi_solver.cc  gurobi_solver.h  ipopt_solver.cc  mathematical_program.cc  mathematical_program.h  mathematical_program_result.cc  mathematical_program_result.h  mosek_solver.cc  nlopt_solver.cc  no_conex.cc  osqp_solver.cc  program_attribute.h  scs_solver.cc  sdpa_free_format.cc  sdpa_free_format.h  snopt_solver.cc  solver_options.cc  solver_options.h  solver_type.h  solver_type_converter.cc  symbolic_extraction.cc  symbolic_extraction.h  (+1 more)
temp/: BUILD.bazel  box.sdf  visualize.py
tmp/: BUILD.bazel  differ.cc  differ.h  float_fmt.cc  float_fmt.h  frames.cc  frames.h  inertia_fixer.py  repro_contact_nondet.cc  repro_contact_nondeterminism.py  repro_contact_nondeterminism.py.SetupEnum.Continuous_WithGeometry_NoGripper.txt  repro_contact_nondeterminism.py.SetupEnum.Discrete_NoGeometry.txt  repro_contact_nondeterminism.py.SetupEnum.Discrete_WithGeometry_AnzuWsg.txt  repro_contact_nondeterminism.py.SetupEnum.Discrete_WithGeometry_AnzuWsgWelded.txt  repro_contact_nondeterminism.py.SetupEnum.Discrete_WithGeometry_DrakeWsg.txt  repro_contact_nondeterminism.py.SetupEnum.Discrete_WithGeometry_NoGripper.txt  repro_contact_nondeterminism.py.summary.txt  text.cc  text.h
tools/: BUILD  BUILD.bazel  kcov.py  ubuntu-noble.bazelrc
tools/workspace/cppad/: package.BUILD.bazel  repository.bzl
tools/workspace/nanobind/: BUILD.bazel  package.BUILD.bazel  repository.bzl
tools/workspace/nanobind/patches/: ndarray_extra_import.patch  ndarray_opaque_handle.patch
tools/workspace/rnv_internal/: package.BUILD.bazel  repository.bzl
tools/workspace/robin_map/: BUILD.bazel  package.BUILD.bazel
tutorials/: BUILD.bazel  authoring_multibody_simulation.py  dynamical_systems.ipynb  hydroelastic_contact_basics.py  hydroelastic_contact_nonconvex_mesh.py  pyplot_animation_multibody_plant.ipynb  rendering_multibody_plant.py
(+578 files in other folders)
