# -*- python -*-
# This file contains rules for Bazel; see drake/doc/bazel.rst.

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

drake_cc_binary(
    name = "push_box",
    srcs = [
        "push_box.cc",
    ],
    data = [":push_box.sdf"],
    deps = [
        "//multibody/plant:contact_results_to_lcm",
        "//systems/framework:diagram",
        "//common:add_text_logging_gflags",
        "//common:find_resource",
        "//geometry:geometry_visualization",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/contact_solvers:mp_convex_solver",
        "//systems/analysis:simulator",
        "//systems/analysis:simulator_gflags",
        "//systems/analysis:simulator_print_stats",
        "@fmt",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "conveyor_belt",
    srcs = [
        "conveyor_belt.cc",
    ],
    data = [":conveyor_belt.sdf"],
    deps = [
        "//multibody/plant:contact_results_to_lcm",
        "//systems/framework:diagram",
        "//common:add_text_logging_gflags",
        "//common:find_resource",
        "//geometry:geometry_visualization",
        "//geometry:drake_visualizer",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/contact_solvers:mp_convex_solver",
        "//multibody/contact_solvers:unconstrained_primal_solver",        
        "//systems/analysis:simulator",
        "//systems/analysis:simulator_gflags",
        "//systems/analysis:simulator_print_stats",
        "@fmt",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "sliding_box",
    srcs = [
        "sliding_box.cc",
    ],
    data = [":sliding_box.sdf"],
    deps = [
        "//multibody/plant:contact_results_to_lcm",
        "//systems/framework:diagram",
        "//common:add_text_logging_gflags",
        "//common:find_resource",
        "//geometry:geometry_visualization",
        "//geometry:drake_visualizer",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/contact_solvers:mp_convex_solver",
        "//systems/analysis:simulator",
        "//systems/analysis:simulator_gflags",
        "//systems/analysis:simulator_print_stats",
        "@fmt",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "clutter",
    srcs = [
        "clutter.cc",
    ],
    add_test_rule = 1,
    test_rule_args = [
        "--simulation_time=0.1",
        "--target_realtime_rate=0.0",
    ],
    copts = ["-O2","-g","-Wno-error=deprecated-declarations","-Wno-deprecated-declarations"],
    deps = [
        "//common:add_text_logging_gflags",
        "//geometry:drake_visualizer",
        "//multibody/plant:contact_results_to_lcm",
        "//multibody/plant:compliant_contact_computation_manager",
        "//multibody/contact_solvers:mp_convex_solver",
        "//multibody/contact_solvers:mp_primal_solver",
        "//multibody/contact_solvers:unconstrained_primal_solver",        
        "//systems/analysis:simulator",
        "//systems/analysis:simulator_gflags",
        "//systems/framework:diagram",
        "//systems/analysis:simulator_print_stats",
        "@gflags",
    ],
)

add_lint_tests()
