# -*- python -*-
# This file contains rules for Bazel; see drake/doc/bazel.rst.

load("@drake//tools/skylark:drake_cc.bzl", "drake_cc_binary")
load("@drake//tools/skylark:drake_py.bzl", "drake_py_unittest")
load("@drake//tools/lint:lint.bzl", "add_lint_tests")

drake_cc_binary(
    name = "rimless_wheel_sim",
    srcs = ["rimless_wheel_sim.cc"],
    deps = [
        "//common:add_text_logging_gflags",
        "//geometry:drake_visualizer",
        "//multibody/plant",
        "//multibody/plant:compliant_contact_computation_manager",
        "//multibody/plant:contact_results_to_lcm",
        "//multibody/contact_solvers:unconstrained_primal_solver",
        "//systems/analysis:simulator",
        "//systems/analysis:simulator_gflags",
        "//systems/analysis:simulator_print_stats",
        "//systems/framework:diagram",
        "@fmt",
        "@gflags",
    ],
)

add_lint_tests()
