load("//tools/lint:lint.bzl", "add_lint_tests")

# This alias provides a single point of control for defining which nanobind
# library our tools/skylark/pybind.bzl macro should use.
alias(
    name = "nanobind",
    actual = "@nanobind",
    visibility = ["//visibility:public"],
)

add_lint_tests()
